# webgraph-openapi

./: README.md
src/backend/: Cargo.toml
src/backend/data/erdos-renyi/: 1k-0001p-t.ef  1k-0001p-t.graph  1k-0001p-t.offsets  1k-0001p-t.properties  1k-0001p.ef  1k-0001p.graph  1k-0001p.offsets  1k-0001p.properties
src/backend/docker/: Dockerfile
src/backend/src/: main.rs
src/docker/: Makefile  compose.yml
src/frontend/docker/: Dockerfile  server.nginx.conf
src/frontend/html/: graphviz-worker.js  index.html  test.html
